# llvm-course

./: app.c  app.ll  statistics.py  stats.txt
ir/: CMakeLists.txt  app_ir_gen.cpp
isa/: CMakeLists.txt  ISA.md  app.s  bin.cpp  cpu.cpp  extIR.cpp  fullIR.cpp  instr.cpp  main.cpp
isa/include/: ISA.h  bin.h  cpu.h  fullIR.h  instr.h
pass/: CMakeLists.txt  Pass.cpp  log.c
